fix: top stories bottom gap

--- a/client/styles/Topstories.module.scss
+++ b/client/styles/Topstories.module.scss
@@ -5,9 +5,9 @@
   padding: 1% 10%;
   padding-top: 0;
   padding-bottom: 0;
-  @media(max-width: 768px) {
+  @media (max-width: 768px) {
     padding: 5% 2%;
-    margin:  2rem 0;
+    margin: 2rem 0;
   }
 }
 
@@ -53,7 +53,7 @@
   display: inline-block;
   min-height: 720px;
   box-shadow: none !important;
-  p{
+  p {
     text-align: justify;
   }
 }
@@ -63,12 +63,18 @@
 //   line-height: 40px;
 // }
 
-.elementmain {
+.paper .elementmain {
   // text-align: center;
+  img {
+    max-height: 400px;
+  }
 }
 
 .elementmain2 {
   // text-align: center;
+  img {
+    max-height: 400px;
+  }
 }
 
 // .elementmain p {
@@ -79,6 +85,11 @@
   // min-height: 200px;
   // max-height: 600px;
   width: 100%;
+  max-height: 250px;
+  object-fit: cover;
+}
+.centerImage {
+  max-height: 400px;
 }
 
 .caption {
